# python_sample

./: .coverage  .gitignore  .pylintrc  Dockerfile  mypy.ini  pyproject.toml
.github/scripts/: CI.sh
.github/workflows/: CD.yaml  CI.yaml
sample/: __init__.py  __main__.py
tests/: test_sample.py
