[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.8b0"
isort = {extras = ["pyproject"], version = "^5.9.3"}
pylint = "^2.10.2"
mypy = "^0.910"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
exclude = '''
(
    .github
    | .mypy_cache
    | .pytest_cache
    | .venv
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 99
multi_line_output = 3
